clang/test/BSC/Negative/NullabilityCheck/while_stmt.cbs
// RUN: %clang_cc1 -verify %s

safe int *borrow _Nullable get_random_ptr(int* borrow p);
safe void test1(void) {
    int a = 10;
    int *borrow _Nullable p = nullptr;
    while (p == nullptr) {
        p = get_random_ptr(&mut a);
    }
    *p = 20;
}

safe void test2(void) {
    int a = 10;
    int *borrow _Nullable p = get_random_ptr(&mut a);
    while (p != nullptr) {
        *p = 10;
        p = get_random_ptr(&mut a);
    }
    *p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test3(void) {
    int a = 10;
    int *borrow _Nullable p = get_random_ptr(&mut a);
    if (p != nullptr) {
        do {
            *p = 10;
            p = get_random_ptr(&mut a);
        } while (p != nullptr);
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
}

safe void test4(void) {
    int a = 10;
    int b = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    while (p == nullptr || q == nullptr) {
        p = get_random_ptr(&mut a);
        q = get_random_ptr(&mut b);
    }
    *p = 20;
    *q = 20;
}

safe void test5(void) {
    int a = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    while (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
        p = get_random_ptr(&mut a);
        q = get_random_ptr(&mut a);
    }
    *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
}

struct S {
    int a;
};
safe struct S *borrow _Nullable get_random_ptr_S(int* borrow p);
safe void test6(void) {
    int a = 10;
    struct S *borrow _Nullable p = nullptr;
    while (p == nullptr) {
        p = get_random_ptr_S(&mut a);
    }
    p->a = 20;
}

safe void test7(void) {
    int a = 10;
    struct S *borrow _Nullable p = get_random_ptr_S(&mut a);
    while (p != nullptr) {
        p->a = 10;
        p = get_random_ptr_S(&mut a);
    }
    p->a = 20;  // expected-error {{cannot access member through nullable pointer}}
}